--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -42,6 +42,7 @@ permalinks:
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
 disableAliases: true
+buildFuture: true
 outputs:
   home: [HTML, RSS, JSON, WebAppManifest, headers, redirects]
   section: [HTML, RSS]
